--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
